@@ -284,8 +284,16 @@ if (defined $ENV{'ACE_TEST_VERBOSE'}) {
 }
 
 my $ok;
-my $t = new Net::Telnet(Timeout => 600, Errmode => 'return');
-$t->open($ENV{'ACE_RUN_VX_TGTHOST'});
+my $telnet_port = $ENV{'ACE_RUN_VX_TGT_TELNET_PORT'};
+my $telnet_host = $ENV{'ACE_RUN_VX_TGT_TELNET_HOST'};
+if (!defined $telnet_host)  {
+  $telnet_host = $ENV{'ACE_RUN_VX_TGTHOST'};
+}
+if (!defined $telnet_port)  {
+  $telnet_port = 23;
+}
+my $t = new Net::Telnet(Timeout => 600, Errmode => 'return', Host => $telnet_host, Port => $telnet_port);
+$t->open();
 $t->print("");
 
 my $target_login = $ENV{'ACE_RUN_VX_LOGIN'};
