@@ -1,3 +1,13 @@
+Tue May  6 08:27:10 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * bin/PerlACE/ProcessVX_Unix.pm:
+        * bin/PerlACE/ProcessVX_Win32.pm:
+          Added support for ACE_RUN_VX_TGT_TELNET_HOST and
+          ACE_RUN_VX_TGT_TELNET_PORT so that an explicit telnet server
+          can be configured. If not specified we use ACE_RUN_VX_TGTHOST
+          which also specifies the ip address that is used as endpoint
+          for the corba servers
+
 Mon May  5 17:09:10 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * include/makeinclude/build_dll.bor:
